2007-05-10  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/LDAPSource.m ([LDAPSource
	-checkLogin:loginToCheckandPassword:passwordToCheck]): if a
	"bindFields" value is present in the user defaults, use the
	specified fields to find the dn of the user to bind.
	([LDAPSource -allEntryIDs]) 
	([LDAPSource -fetchContactsMatching:match]) 
	([LDAPSource -lookupContactEntry:entryID]) 
	([LDAPSource -lookupContactEntryWithUIDorEmail:uid]):
	bind and unbind the connection on each request.

	* UI/MailerUI/UIxMailAddressbook.m: removed obsolete module.

	* UI/Contacts/UIxContactFoldersView.m ([UIxContactFoldersView
	-contactSearchAction]): simplified method to use the facilities
	provided by the LDAPUserManager. No longer takes care of the
	"ldap-only" url parameter since all requests are handled by the
	usermanager now.

	* SoObjects/SOGo/AgenorUserDefaults.m ([AgenorUserDefaults
	-primaryFetchProfile]): check that the value returned is not null
	before interpreting it.

	* SoObjects/SOGo/LDAPUserManager.m ([LDAPUserManager
	-contactInfosForUserWithUIDorEmail:uid]): check that uid is not empty.
	([LDAPUserManager -_fillContactMailRecords:contact]): if the
	system email is already present, remove it before adding it.

	* SoObjects/SOGo/LDAPSource.m ([LDAPSource
	-checkLogin:loginToCheckandPassword:passwordToCheck]): check that
	loginToCheck is not empty.
	([LDAPSource -fetchContactsMatching:match]): check that match is
	not empty.
	([LDAPSource -lookupContactEntry:entryID]): check that entryID is
	not empty.
	([LDAPSource -lookupContactEntryWithUIDorEmail:uid]): check that
	uid is not empty.

2007-05-09  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoUser.m ([SOGoUser -primaryEmail]): new name
	for "mail" method.
	([SOGoUser -systemEmail]): returns the email formed from the
	username and the default mail domain.
	([SOGoUser -hasEmail:email]): test whether the user has the
	specified email, in a case-insensitive way.
